fix border overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,6 +130,7 @@
   background-image: url("/images/banner1.jpg");
   background-size: cover;
   background-position: top;
+  background-repeat: no-repeat;
 }
 
 .book-overview {
